tests/rosetta/transpiler/Scala/a+b.scala
// Generated by Mochi v0.10.37 on 2025-07-22 20:23:21 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main() = {
    val a = int(input())
    val b = int(input())
    println(a + b)
  }
  
  def main(args: Array[String]): Unit = {
    main()
  }
}
